--- a/deel-2-flexbox-layout/opdracht-1/index.html
+++ b/deel-2-flexbox-layout/opdracht-1/index.html
@@ -7,46 +7,46 @@
     <title>Flexbox-opdracht: layouts maken (1)</title>
 </head>
 <body>
-<header>Header</header>
-<main>
-    <article>
+<header class="header">Header</header>
+<main class="content">
+    <article class="content article">
         Article
-        <!--<p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
-            earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
-            expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
-            vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
-            earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
-            expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
-            vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
-            earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
-            expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
-            vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
-            earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
-            expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
-            vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
-            earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
-            expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
-            vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
-            earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
-            expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
-            vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
-            earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
-            expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
-            vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
-            earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
-            expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
-            vitae! Hic illo ipsum iure repellendus sed voluptate?</p>-->
+            <p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
+                earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
+                expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
+                vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
+                earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
+                expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
+                vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
+                earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
+                expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
+                vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
+                earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
+                expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
+                vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
+                earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
+                expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
+                vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
+                earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
+                expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
+                vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
+                earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
+                expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
+                vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
+                earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
+                expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
+                vitae! Hic illo ipsum iure repellendus sed voluptate?</p>-->
     </article>
-    <nav>Nav</nav>
-    <aside>Aside</aside>
+    <nav class="content nav">Nav</nav>
+    <aside class="content aside">Aside</aside>
 </main>
-<footer>Footer</footer>
+<footer class="footer">Footer</footer>
 </body>
 </html>
