--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -7,10 +7,38 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-    <div>
-        <h1>All Your Business Data in One Place</h1>
-        <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
-            analytics tools.</h3>
+<div class="introduction">
+    <h1>All Your Business Data in One Place</h1>
+    <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
+        analytics tools.</h3>
+
+
+    <div class="sections">
+        <div class="section-1">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim egestas eros. Nam pulvinar,
+                erat
+                sit amet facilisis tempor, diam nibh maximus erat, quis feugiat massa elit sed lectus. Maecenas.
+            </p>
+        </div>
+
+        <div class="section-2">
+            <p>ante metus dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu non odio euismod lacinia at
+                quis
+                risus sed vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam
+            </p>
+        </div>
+
+        <div class="section-3">
+            <p>vitae nunc sed velit dignissim sodales ut eu sem integer vitae justo eget magna fermentum iaculis eu non
+                diam
+                phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet enim tortor
+            </p>
+        </div>
     </div>
+
+
+</div>
+
+
 </body>
 </html>
