--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
     <link rel="stylesheet" href="styles/styles.css">
     <title>Flexbox opdracht 3</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<header class="header">
+    <div class="logo"><p>LOGOLOGO</p></div>
+    <div class="header-buttons">
+        <button>About us</button>
+        <button>Strategy</button>
+        <button>Prices</button>
+        <button>Contact</button>
+    </div>
+</header>
 <div class="introduction">
     <h1>All Your Business Data in One Place</h1>
     <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
@@ -14,6 +24,7 @@
 
 
     <div class="sections">
+        <div class="spacer"></div>
         <div class="section-1">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim egestas eros. Nam pulvinar,
                 erat
@@ -22,18 +33,19 @@
         </div>
 
         <div class="section-2">
-            <p>ante metus dictum at tempor commodo ullamcorper a lacus vestibulum sed arcu non odio euismod lacinia at
-                quis
-                risus sed vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim egestas eros. Nam pulvinar,
+                erat
+                sit amet facilisis tempor, diam nibh maximus erat, quis feugiat massa elit sed lectus. Maecenas.
             </p>
         </div>
 
         <div class="section-3">
-            <p>vitae nunc sed velit dignissim sodales ut eu sem integer vitae justo eget magna fermentum iaculis eu non
-                diam
-                phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet enim tortor
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim egestas eros. Nam pulvinar,
+                erat
+                sit amet facilisis tempor, diam nibh maximus erat, quis feugiat massa elit sed lectus. Maecenas.
             </p>
         </div>
+        <div class="spacer"></div>
     </div>
 
 
